--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^1.22.0",
     "morgan": "^1.7.0",
     "pg": "^6.1.0",
     "prom-client": "^11.5.3",
